--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="bower_components/highlightjs/styles/tomorrow.css" />
 	<link rel="stylesheet" href="bower_components/ruban/css/ruban.min.css" />
 	<link rel="stylesheet" href="bower_components/ruban/css/ruban-print.min.css" media="print" />
+	<link rel="stylesheet" href="css/style.css"/>
 </head>
 
 <body>
@@ -21,7 +22,11 @@
 <script src="bower_components/highlightjs/highlight.pack.js"></script>
 <script src="bower_components/ruban/js/ruban.min.js"></script>
 <script>
-	new Ruban();
+	new Ruban({
+		pagination : true,
+		ratio : 4/3,
+		transitionDuration : '0.8s'
+	});
 </script>
 </body>
 </html>
